Refactor `Driver` & `Volumes`
- Volume controller updates status field on the volume spec whenever
  provisioning succeeds.
- Introduced protovalidate because of `oneof` semantics
- Added cli commands `create volume` and `delete volume`
