# api/services/volumes/v1/volumes.swagger.json
@@ -128,6 +128,12 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "purge",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
           }
         ],
         "tags": [
@@ -167,6 +173,12 @@
           },
           {
             "name": "status.phase",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "status.location",
             "in": "query",
             "required": false,
             "type": "string"
@@ -403,11 +415,10 @@
       "type": "object",
       "properties": {
         "hostLocal": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/v1HostLocal"
-          }
+          "$ref": "#/definitions/v1HostLocal"
+        },
+        "rclone": {
+          "$ref": "#/definitions/v1HostLocal"
         },
         "nodeSelector": {
           "type": "object",
@@ -421,9 +432,6 @@
       "type": "object",
       "properties": {
         "name": {
-          "type": "string"
-        },
-        "destination": {
           "type": "string"
         }
       }
@@ -496,6 +504,9 @@
       "type": "object",
       "properties": {
         "phase": {
+          "type": "string"
+        },
+        "location": {
           "type": "string"
         }
       }
