# pkg/controller/volume.go
@@ -4,11 +4,14 @@ import (
 	"context"
 
 	eventsv1 "github.com/amimof/blipblop/api/services/events/v1"
+	volumesv1 "github.com/amimof/blipblop/api/services/volumes/v1"
 	"github.com/amimof/blipblop/pkg/client"
+	"github.com/amimof/blipblop/pkg/consts"
 	"github.com/amimof/blipblop/pkg/events"
 	"github.com/amimof/blipblop/pkg/logger"
 	"github.com/amimof/blipblop/pkg/volume"
 	"google.golang.org/grpc/metadata"
+	"google.golang.org/protobuf/types/known/wrapperspb"
 )
 
 type NewVolumeControllerOption func(c *VolumeController)
@@ -19,7 +22,7 @@ func WithVolumeControllerLogger(l logger.Logger) NewVolumeControllerOption {
 	}
 }
 
-func WithVolumeManager(m volume.Manager) NewVolumeControllerOption {
+func WithVolumeManager(m volume.Driver) NewVolumeControllerOption {
 	return func(c *VolumeController) {
 		c.volManager = m
 	}
@@ -28,7 +31,7 @@ func WithVolumeManager(m volume.Manager) NewVolumeControllerOption {
 type VolumeController struct {
 	logger     logger.Logger
 	clientset  *client.ClientSet
-	volManager volume.Manager
+	volManager volume.Driver
 }
 
 func (vc *VolumeController) Run(ctx context.Context) {
@@ -43,7 +46,8 @@ func (vc *VolumeController) Run(ctx context.Context) {
 	)
 
 	// Setup Node Handlers
-	vc.clientset.EventV1().On(events.NodeCreate, vc.onVolumeCreate)
+	vc.clientset.EventV1().On(events.VolumeCreate, vc.onVolumeCreate)
+	vc.clientset.EventV1().On(events.VolumeDelete, vc.onVolumeDelete)
 
 	go func() {
 		for e := range evt {
@@ -69,6 +73,66 @@ func (vc *VolumeController) Run(ctx context.Context) {
 }
 
 func (vc *VolumeController) onVolumeCreate(ctx context.Context, ev *eventsv1.Event) error {
+	volSpec := &volumesv1.Volume{}
+	err := ev.GetObject().UnmarshalTo(volSpec)
+	if err != nil {
+		return err
+	}
+
+	hostLocalVolume := volSpec.GetConfig().GetHostLocal()
+	id := hostLocalVolume.GetName()
+	vol, err := vc.volManager.Create(ctx, id)
+	if err != nil {
+		_ = vc.clientset.VolumeV1().Status().Update(
+			ctx,
+			id,
+			&volumesv1.Status{
+				Phase: wrapperspb.String(consts.ERRPROVISIONING),
+			},
+			"phase",
+		)
+		return err
+	}
+
+	vc.logger.Debug("created host-local volume", "id", vol.ID(), "location", vol.Location())
+
+	err = vc.clientset.VolumeV1().Status().Update(
+		ctx,
+		string(vol.ID()),
+		&volumesv1.Status{
+			Location: wrapperspb.String(vol.Location()),
+			Phase:    wrapperspb.String(consts.PHASEPROVISIONED),
+		},
+		"phase", "location",
+	)
+	if err != nil {
+		vc.logger.Error("error setting status on volume", "error", err)
+	}
+
+	return err
+}
+
+func (vc *VolumeController) onVolumeDelete(ctx context.Context, ev *eventsv1.Event) error {
+	volSpec := &volumesv1.Volume{}
+	err := ev.GetObject().UnmarshalTo(volSpec)
+	if err != nil {
+		return err
+	}
+
+	hostLocalVolume := volSpec.GetConfig().GetHostLocal()
+	id := hostLocalVolume.GetName()
+	if err := vc.volManager.Delete(ctx, id); err != nil {
+		_ = vc.clientset.VolumeV1().Status().Update(
+			ctx,
+			id,
+			&volumesv1.Status{
+				Phase: wrapperspb.String(consts.ERRDELETE),
+			},
+			"phase",
+		)
+		return err
+	}
+
 	return nil
 }
 
@@ -77,7 +141,7 @@ func (vc *VolumeController) Reconcile(context.Context) error {
 	panic("unimplemented")
 }
 
-func NewVolumeController(c *client.ClientSet, opts ...NewVolumeControllerOption) (*VolumeController, error) {
+func NewVolumeController(c *client.ClientSet, opts ...NewVolumeControllerOption) *VolumeController {
 	m := &VolumeController{
 		clientset:  c,
 		logger:     logger.ConsoleLogger{},
@@ -87,5 +151,5 @@ func NewVolumeController(c *client.ClientSet, opts ...NewVolumeControllerOption)
 		opt(m)
 	}
 
-	return m, nil
+	return m
 }
